# Reading-Assistant

./: .gitignore  Cargo.toml  docker-compose.yaml  grinchset.txt  openapi.json  orval.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  practice.txt
apps/reading-assistant-app/: components.json  package.json  react-router.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
apps/reading-assistant-app/app/: globals.css  root.tsx  routes.ts
apps/reading-assistant-app/app/components/session/: notes-grid.tsx  session-list-sidebar.tsx
apps/reading-assistant-app/app/hooks/: use-voice-recorder.ts
apps/reading-assistant-app/app/lib/: audio-player.ts  ws-client.ts
apps/reading-assistant-app/app/providers/: auth-provider.tsx  session-provider.tsx
apps/reading-assistant-app/app/routes/: home.tsx  login.tsx  session.tsx
apps/reading-assistant-app/public/: audio-processor.js
crates/reading_assistant_core/: Cargo.toml
crates/reading_assistant_core/src/: domain.rs  lib.rs  ports.rs
services/api/: Cargo.toml
services/api/migrations/: 20250923154455_create_initial_tables.up.sql  20251020225752_add_uuid_extension.up.sql  20251130150040_add_auth.up.sql  20251205171953_add_doc_title.up.sql
services/api/src/: config.rs  error.rs  lib.rs
services/api/src/adapters/: db.rs  mod.rs  notes_llm.rs  qa_llm.rs  sst.rs  title_llm.rs  tts.rs
services/api/src/web/: auth.rs  middleware.rs  mod.rs  protocol.rs  qa_task.rs  reading_task.rs  rest.rs  state.rs  ws_handler.rs
