
# This is the top-level Cargo.toml for your entire project.

[workspace]
resolver = "2"
members = [
    "crates/reading_assistant_core",
    "services/api",
]

# This is the new, central location where you define the versions
# for all dependencies shared across your workspace.
[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.35.1", features = ["full"] }
async-trait = "0.1.77"
bytes = "1.6.0"
futures = "0.3.30" # Added for WebSocket stream/sink handling
tokio-util = "0.7.10" # Added the missing dependency

# Web framework

# Database
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# OpenAI API client
async-openai = "0.29.3"

# Configuration and Error Handling
dotenvy = "0.15.7"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Serialization
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# IDs
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }