# This is the Cargo.toml specifically for your `api` service.

[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
name = "api_lib"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "openapi"
path = "src/bin/openapi.rs"

[dependencies]
reading_assistant_core = { path = "../../crates/reading_assistant_core" }
argon2 = "0.5.3"

# Workspace-inherited dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
sqlx = { workspace = true }
async-openai = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures.workspace = true
tokio-util = { workspace = true }
axum = { version = "0.8", features = ["ws", "multipart"] }

# Dependencies for OpenAPI specification and Swagger UI
utoipa = { version="5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version="9.0.2", features=["axum"] }
tower-http = { version = "0.6.6", features = ["cors"] }
hound = "3.5.1"
regex = "1.12.2"
async-stream = "0.3.6"
